--- a/public/index.html
+++ b/public/index.html
@@ -129,5 +129,18 @@
             });
         }
     </script>
+
+    <!-- 🚀 MELHORIAS V2 - Scripts -->
+    <script src="js/timeline.js"></script>
+    <script src="js/progress.js"></script>
+    <script src="js/checklist.js"></script>
+    <script src="js/spending.js"></script>
+    <script src="js/notifications.js"></script>
+    <script src="js/badges.js"></script>
+    <script src="js/analytics.js"></script>
+
+<!-- Link para CSS de melhorias -->
+<link rel="stylesheet" href="css/enhancements.css">
+
 </body>
 </html>
