--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-color-scheme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -130,7 +130,8 @@
         }
     </script>
 
-    <!-- 🚀 MELHORIAS V2 - Scripts -->
+<!-- 🚀 MELHORIAS V2 - Scripts -->
+    <script src="js/theme-selector.js"></script>  <!-- ⭐ NOVO -->
     <script src="js/timeline.js"></script>
     <script src="js/progress.js"></script>
     <script src="js/checklist.js"></script>
@@ -138,6 +139,7 @@
     <script src="js/notifications.js"></script>
     <script src="js/badges.js"></script>
     <script src="js/analytics.js"></script>
+
 
 <!-- Link para CSS de melhorias -->
 <link rel="stylesheet" href="css/enhancements.css">
